--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "4.16.0",
     "http-errors": "1.6.2",
     "lightbox2": "^2.11.0",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
+    "thunkify": "^2.1.2"
   }
 }
