--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "2.5.7",
     "express": "4.16.0",
     "express-fileupload": "^0.1.4",
+    "express-session": "^1.17.1",
     "http-errors": "1.6.2",
     "lightbox2": "^2.11.0",
     "morgan": "1.9.0",
